--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "/index.html",
   "display": "standalone",
   "theme_color": "#F8A910",
   "background_color": "#ffffff"
